added linting preferences and created the data extraction pipeline

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-blank-template",
+  "name": "genezio-rag-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
