--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,25 @@
 {
-    "name": "genezio-tutorial-backend",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@genezio/types": "^1.0.14",
-        "node-fetch": "^3.3.2"
-    },
-    "prettier": {
-        "tabWidth": 2
-    },
-    "devDependencies": {
-        "@types/node": "^20.14.2",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
-        "eslint": "^8.55.0"
-    }
+  "name": "genezio-rag-backend",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@genezio/types": "^1.0.14",
+    "llamaindex": "^0.3.16",
+    "node-fetch": "^3.3.2"
+  },
+  "prettier": {
+    "tabWidth": 2
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.2",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0"
+  }
 }
