--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@mantine/core": "^7.10.2",
     "@tabler/icons-react": "^3.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "unpdf": "^0.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
