--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@genezio/types": "^1.0.14",
     "llamaindex": "^0.3.16",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "pdf-parse": "^1.1.1"
   },
   "prettier": {
     "tabWidth": 2
   },
   "devDependencies": {
-    "@types/node": "^20.14.5",
+    "@types/node": "^20.14.8",
+    "@types/pdf-parse": "^1.1.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.55.0",
