--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@genezio/types": "^1.0.14",
+    "@genezio/types": "^1.0.19",
+    "@types/pg": "^8.11.6",
     "llamaindex": "^0.3.16",
     "node-fetch": "^3.3.2",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pg": "^8.12.0"
   },
   "prettier": {
     "tabWidth": 2
   },
   "devDependencies": {
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "@types/pdf-parse": "^1.1.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
